Update classes of JEI integration with new features